New project: whichprovides

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,7 +18,8 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
-<li>“<a href="https://pluralistic.net/2025/04/24/hermit-kingdom">Every complex ecosystem has parasites (24 Apr 2025)</a>”</li>
+<li>“<a href="https://www.anthropocenemagazine.org/2025/04/new-study-compares-growing-corn-for-energy-to-solar-production-its-no-contest">Growing corn versus solar energy is no contest</a>” by <strong>Emma Bryce</strong></li>
+<li>“<a href="https://pluralistic.net/2025/04/24/hermit-kingdom">Every complex ecosystem has parasites</a>” by <strong>Cory Doctorow</strong></li>
 <li>“<a href="https://www.theguardian.com/us-news/ng-interactive/2025/apr/13/end-times-fascism-far-right-trump-musk">End-times fascism</a>” by <strong>Naomi Klein and Astra Taylor</strong></li>
 <li>“<a href="https://simone.org/advertising">What if we made advertising illegal?</a>”</li>
 <li>“<a href="https://engineerscanada.ca/nem2025/feature-stories/100-years-of-the-iron-ring-a-symbol-of-an-engineers-commitment">Iron rings: a symbol of engineer's commitment</a>”</li>
@@ -70,7 +71,8 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
-<li>“<a href="https://mattgreer.dev/blog/printing-ereader-cards-part-4">Printing Nintendo E-Reader Cards: Part 4, troubleshooting</a>”</li>
+<li>“<a href="https://www.videogameschronicle.com/news/game-preservationists-say-switch-2-game-key-cards-are-disheartening-but-inevitable">Switch 2 Game-Key Cards are disheartening but inevitable</a>”</li>
+<li>“<a href="https://mattgreer.dev/blog/printing-ereader-cards-part-4">Troubleshooting Nintendo E-Reader Card printing</a>” by <strong>Matt Greer</strong></li>
 <li>“<a href="https://www.homebrew-factory.com">Homebrew Factory</a>”</li>
 <li>“<a href="https://www.youtube.com/watch?v=n3dFAK3Owtg">Legend of Zelda and miniature gardens (箱庭)</a>” by <strong>Javed Sterritt</strong></li>
 <li>“<a href="https://en-americas-support.nintendo.com/app/answers/detail/a_id/68415/~/nintendo-switch%26nbsp%3B2-game-key-card-overview">Nintendo Switch 2 Game-Key Cards</a>”</li>
@@ -144,7 +146,7 @@
 </ul>
 <h2>Security</h2>
 <ul>
-<li>“<a href="https://jonathan.protzenko.fr/2025/04/18/python.html">15,000 lines of verified cryptography now in Python</a>”</li>
+<li>“<a href="https://jonathan.protzenko.fr/2025/04/18/python.html">15,000 lines of verified cryptography now in Python</a>” by <strong>Jonathan Protzenko</strong></li>
 <li>“<a href="https://sgued.fr/blog/der-pem-cert">Certificate that is PEM and DER encoded</a>” by <strong>Sosthène Guédon</strong></li>
 <li>“<a href="https://boehs.org/node/homomorphic-encryption">Homomorphic Encryption in iOS 18</a>” by <strong>Evan Boehs</strong></li>
 <li>“<a href="https://blog.yossarian.net/2024/11/18/Security-means-securing-people-where-they-are">Security means securing people where they are</a>” by <strong>William Woodruff</strong></li>
@@ -165,7 +167,8 @@
 </ul>
 <h2>Social Media</h2>
 <ul>
-<li>“<a href="https://madhavajay.com/the-cold-start-problem-using-network-effects-to-scale-your-product">The Cold Start Problem: Using Network Effects to Scale Your Product - A Review</a>”</li>
+<li>“<a href="https://www.nytimes.com/interactive/2025/04/23/business/elon-musk-x-suppression-laura-loomer.html">Elon Musk punishes dissent on Twitter with algorithm</a>”</li>
+<li>“<a href="https://madhavajay.com/the-cold-start-problem-using-network-effects-to-scale-your-product">Network effects and the cold-start problem</a>” by <strong>Madhava Jay</strong></li>
 <li>“<a href="https://cheapskatesguide.org/articles/ai-against-small-internet.html">AI filtering the indie web</a>”</li>
 <li>“<a href="https://speedbumpapp.com/en/blog/how-to-reduce-screen-time">Guide for reducing screen time</a>” by <strong>Mario Ortiz Manero</strong></li>
 <li>“<a href="https://www.theverge.com/social/639811/view-counts-tiktok-instagram-x-youtube-lies">Digital 'views' are lies</a>” by <strong>David Pierce</strong></li>
@@ -192,6 +195,8 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://alexwlchan.net/2025/copying-sqlite-databases">Copying SQLite databases without indexes</a>” by <strong>Alex Chan</strong></li>
+<li>“<a href="https://simonwillison.net/2025/Apr/28/give-it-away-for-free">The best software delivery is static HTML and JavaScript</a>” by <strong>Simon Willison</strong></li>
 <li>“<a href="https://pwy.io/posts/marching-events">iCal and ray-casting</a>” by <strong>Patryk Wychowaniec</strong></li>
 <li>“<a href="https://jackscogito.blogspot.com/2025/04/e-ink-mode-making-web-pages-easier-to.html">e-Ink for web pages</a>”</li>
 <li>“<a href="https://tante.cc/2025/04/15/these-are-not-the-same">What physical infrastructure will be left by the AI bubble?</a>” by <strong>Jürgen Geuter</strong></li>
@@ -291,9 +296,9 @@
 </ul>
 <h2>Toys and Art</h2>
 <ul>
-<li>“<a href="https://hyperwood.org">Hyperwood – Open-Source Furniture</a>”</li>
-<li>“<a href="https://blog.infected.systems/posts/2025-04-21-this-blog-is-hosted-on-a-nintendo-wii">This blog is hosted on a Nintendo Wii</a>”</li>
-<li>“<a href="https://kuberwastaken.github.io/blog/Projects/How-I-Managed-To-Get-Doom-In-A-QR-Code">How I Managed To Get Doom In A QR Code</a>”</li>
+<li>“<a href="https://hyperwood.org">Hyperwood</a>”</li>
+<li>“<a href="https://blog.infected.systems/posts/2025-04-21-this-blog-is-hosted-on-a-nintendo-wii">This blog is hosted on a Nintendo Wii</a>” by <strong>Alex Haydock</strong></li>
+<li>“<a href="https://kuberwastaken.github.io/blog/Projects/How-I-Managed-To-Get-Doom-In-A-QR-Code">Doom in a QR code</a>” by <strong>Kuber Mehta</strong></li>
 <li>“<a href="https://sharpletters.net/2025/04/16/hdr-emoji">HDR‑infused emoji</a>” by <strong>Corry Haines</strong></li>
 <li>“<a href="https://nlnetlabs.nl/news/2025/Apr/01/phonebook-of-the-internet">Internet phone book</a>”</li>
 <li>“<a href="https://en.wikipedia.org/wiki/Slopsquatting">Slopsquatting</a>”</li>
