--- a/app/static/style.css
+++ b/app/static/style.css
@@ -74,6 +74,10 @@ table {
   white-space: nowrap;
   margin: 0;
   margin-bottom: 1.5em;
+  background-color: #e9e9e9;
+}
+tbody {
+  background-color: #ffffff;
 }
 table td, table th {
     border: 2px dotted #000000;
@@ -98,7 +102,7 @@ td, th {
   padding-right: 0.5em;
 }
 thead {
-  background-color: #f0f0f0;
+  background-color: #e9e9e9;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -172,15 +176,14 @@ pre {
 }
 :not(pre) > code {
   font-family: Menlo, 'Fira Mono', monospace;
-  background-color: #f0f0f0;
-  border-radius: 0.2em;
-  padding: 0.2em;
+  background-color: #e9e9e9;
+  padding: 2px 5px;
   white-space: nowrap;
 }
 .codehilite, :not(.codehilite) > pre {
   font-family: "Roboto Mono", monospace;
   font-size: 1.3rem;
-  background-color: #f0f0f0;
+  background-color: #e9e9e9;
   border-style: solid;
   border-width: 2px;
   padding: 1em;
@@ -189,7 +192,7 @@ pre {
   margin-bottom: 1.5em;
 }
 blockquote {
-  background-color: #f0f0f0;
+  background-color: #e9e9e9;
   border-style: solid;
   border-width: 2px;
   margin: 0;
