--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -18,6 +18,8 @@
 <p id="#sentinel">
 <h2>Life</h2>
 <ul>
+<li>“<a href="https://www.youtube.com/watch?v=HAf4BZwyBeo">A love letter to old cars</a>” by <strong>James Pumphrey</strong></li>
+<li>“<a href="https://www.jack.bio/blog/wafflehouse">Waffle House Cease & Desist</a>” by <strong>Jack LaFond</strong></li>
 <li>“<a href="https://www.anthropocenemagazine.org/2025/04/new-study-compares-growing-corn-for-energy-to-solar-production-its-no-contest">Growing corn versus solar energy is no contest</a>” by <strong>Emma Bryce</strong></li>
 <li>“<a href="https://pluralistic.net/2025/04/24/hermit-kingdom">Every complex ecosystem has parasites</a>” by <strong>Cory Doctorow</strong></li>
 <li>“<a href="https://www.theguardian.com/us-news/ng-interactive/2025/apr/13/end-times-fascism-far-right-trump-musk">End-times fascism</a>” by <strong>Naomi Klein and Astra Taylor</strong></li>
@@ -71,6 +73,10 @@
 </ul>
 <h2>Retro Gaming</h2>
 <ul>
+<li>“<a href="https://retroachievements.org">RetroAchievements</a>”</li>
+<li>“<a href="https://github.com/loopj/wavephoenix">WavePhoenix: Open source of the WaveBird protocol</a>” by <strong>James Smith</strong></li>
+<li>“<a href="https://pikmintkb.com/wiki/Pikmin_2_save_file">Pikmin 2 save file format</a>”</li>
+<li>“<a href="https://hitmen.c02.at/files/yagcd/yagcd/chap12.html">Yet Another Gamecube Documentation</a>”</li>
 <li>“<a href="https://www.videogameschronicle.com/news/game-preservationists-say-switch-2-game-key-cards-are-disheartening-but-inevitable">Switch 2 Game-Key Cards are disheartening but inevitable</a>”</li>
 <li>“<a href="https://mattgreer.dev/blog/printing-ereader-cards-part-4">Troubleshooting Nintendo E-Reader Card printing</a>” by <strong>Matt Greer</strong></li>
 <li>“<a href="https://www.homebrew-factory.com">Homebrew Factory</a>”</li>
@@ -146,6 +152,8 @@
 </ul>
 <h2>Security</h2>
 <ul>
+<li>“<a href="https://blog.ian.stapletoncordas.co/2025/05/learning-pki.html">Learning PKI</a>” by <strong>Ian Stapleton Cordasco</strong></li>
+<li>“<a href="https://irenes.space/leaves/2025-05-10-shattering-passkeys">Shattering "passkeys" as a word</a>” by <strong>Irenes</strong></li>
 <li>“<a href="https://jonathan.protzenko.fr/2025/04/18/python.html">15,000 lines of verified cryptography now in Python</a>” by <strong>Jonathan Protzenko</strong></li>
 <li>“<a href="https://sgued.fr/blog/der-pem-cert">Certificate that is PEM and DER encoded</a>” by <strong>Sosthène Guédon</strong></li>
 <li>“<a href="https://boehs.org/node/homomorphic-encryption">Homomorphic Encryption in iOS 18</a>” by <strong>Evan Boehs</strong></li>
@@ -195,6 +203,8 @@
 </ul>
 <h2>Software and OSS</h2>
 <ul>
+<li>“<a href="https://mstdn.social/@jschauma/114543264171179185">The 'U' in '?utm=' means 'Urchin'</a>” by <strong>Jan Schaumann</strong></li>
+<li>“<a href="https://www.humanqr.com/news/qr-code-not-scanning-well-try-to-help">QR code not scanning? Let us help!</a>”</li>
 <li>“<a href="https://alexwlchan.net/2025/copying-sqlite-databases">Copying SQLite databases without indexes</a>” by <strong>Alex Chan</strong></li>
 <li>“<a href="https://simonwillison.net/2025/Apr/28/give-it-away-for-free">The best software delivery is static HTML and JavaScript</a>” by <strong>Simon Willison</strong></li>
 <li>“<a href="https://pwy.io/posts/marching-events">iCal and ray-casting</a>” by <strong>Patryk Wychowaniec</strong></li>
@@ -296,6 +306,9 @@
 </ul>
 <h2>Toys and Art</h2>
 <ul>
+<li>“<a href="https://www.theamdash.com">Am Dash</a>”</li>
+<li>“<a href="https://izbicki.me/blog/how-to-cheat-at-settlers-of-catan-by-loading-the-dice-and-prove-it-with-p-values.html">Loaded dice and Settlers of Catan</a>” by <strong>Mike Izbicki</strong></li>
+<li>“<a href="https://lab.avl.la/dotless">Dotless domains</a>”</li>
 <li>“<a href="https://hyperwood.org">Hyperwood</a>”</li>
 <li>“<a href="https://blog.infected.systems/posts/2025-04-21-this-blog-is-hosted-on-a-nintendo-wii">This blog is hosted on a Nintendo Wii</a>” by <strong>Alex Haydock</strong></li>
 <li>“<a href="https://kuberwastaken.github.io/blog/Projects/How-I-Managed-To-Get-Doom-In-A-QR-Code">Doom in a QR code</a>” by <strong>Kuber Mehta</strong></li>
