--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Seth Michael Larson">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no"/>
+    <meta name="fediverse:creator" content="@sethmlarson@mastodon.social"/>
     <meta name="fediverse:creator" content="@sethmlarson@fosstodon.org"/>
     <link rel="alternate" type="application/rss+xml" title="RSS Feed" href="{{ url_for('rss_blog_posts') }}"/>
     <link rel="alternate" type="application/atom+xml" title="Atom Feed" href="{{ url_for('rss_blog_posts') }}"/>
