Switch to sethmlarson@mastodon.social

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
             <div><a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener noreferrer">sethmichaellarson@gmail.com</a></div>
             <div><a href="mailto:seth@python.org" target="_blank" rel="noopener noreferrer">seth@python.org</a></div>
             <div><a href="https://signal.me/#eu/gpQLD3Q+O1Azvo7cD5nggei42PazYNXHnL1XYLaumYjv/ZCr09NK0Z7uJKTlnFJw" target="_blank" rel="me noopener noreferrer">sethmlarson.99</a></div>
-            <div><a href="https://fosstodon.org/@sethmlarson" target="_blank" rel="me noopener noreferrer">sethmlarson@fosstodon.org</a></div>
+            <div><a href="https://mastodon.social/@sethmlarson" target="_blank" rel="me noopener noreferrer">sethmlarson@mastodon.social</a></div>
             <div><a href="https://bsky.app/profile/sethmlarson.dev" target="_blank" rel="me noopener noreferrer">sethmlarson.dev</a></div>
             <div><a href="https://github.com/sethmlarson" target="_blank" rel="me noopener noreferrer">sethmlarson</a></div>
             <div><a href="https://discord.com/users/481989102951202817" target="_blank" rel="noopener noreferrer">sethmlarson</a></div>
