Strikeout sethmlarson@fosstodon.org

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,6 +26,7 @@
             <hr>
             <div><strike>Twitter:</strike></div>
             <div><strike>Keybase:</strike></div>
+            <div><strike>Mastodon:</strike></div>
         </div>
         <div class="col-4 col-8-sm">
             <div><a href="mailto:sethmichaellarson@gmail.com" target="_blank" rel="noopener noreferrer">sethmichaellarson@gmail.com</a></div>
@@ -39,6 +40,7 @@
             <hr>
             <div>sethmlarson</div>
             <div>sethmlarson</div>
+            <div>sethmlarson@fosstodon.org</div>
         </div>
     </div>
 {% endblock %}
