--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -29,7 +29,7 @@
     <p style="overflow: clip;">
         <a href="https://signal.me/#eu/gpQLD3Q+O1Azvo7cD5nggei42PazYNXHnL1XYLaumYjv/ZCr09NK0Z7uJKTlnFJw" target="_blank"><code>sethmlarson.99</code></a> (Signal)<br>
         <a href="mailto:sethmichaellarson@gmail.com" target="_blank"><code>sethmichaellarson@gmail.com</code></a><br>
-        <a href="https://fosstodon.org/@sethmlarson" target="_blank"><code>@sethmlarson@fosstodon.org</code></a>
+        <a href="https://mastodon.social/@sethmlarson" target="_blank"><code>@sethmlarson@mastodon.social</code></a>
     </p>
     <p>
         <strong>Want more articles like this one?</strong>
