--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -17,6 +17,14 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://www.youtube.com/watch?v=hCQCP-5g5bo">I Saved a PNG Image To A Bird</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://happyfellow.bearblog.dev/computational-tyranny">Computational Tyranny</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://tenbluelinks.org">Disabling Google Search AI overview</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://udm14.com">?udm=14</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://unstable.systems/@sop/114898566686215926">AI autocomplete is f*cking annoying</a>” by Sofia</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://maalvika.substack.com/p/compression-culture-is-making-you">Compression culture</a>” by Maalvika Bhat</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://utcc.utoronto.ca/~cks/space/blog/tech/PeopleWantSoftwareResponsibility">People want software responsibility</a>” by Chris Seibenmann</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://hunterirving.com/gobbler">Gobbler</a>” by Hunter Irving</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://www.metalabel.com/studio/release-strategies/how-culture-is-made">How culture is made</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://youtu.be/B2N15VqJ3EM?feature=shared">Restoring and modding the GameCube Panasonic Q</a>” by Elliot Coll</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.youtube.com/watch?v=Yw8Alf_lolA&t=1s">Animal Crossing and the GameCube Keyboard Controller</a>” by Hunter Irving</td></tr>
