--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 {% block header %}
-<h1>Seth Michael Larson</h1>
 {% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-6 col-12-sm">
             <p>
-                Hey there! My name is Seth, and I am the <a href="https://pyfound.blogspot.com/2023/06/announcing-our-new-security-developer.html" target="_blank" rel="noopener noreferrer">Security Developer-in-Residence</a>
+                Hey there! My name is Seth Larson, and I am the <a href="https://pyfound.blogspot.com/2023/06/announcing-our-new-security-developer.html" target="_blank" rel="noopener noreferrer">Security Developer-in-Residence</a>
                 at the Python Software Foundation working to improve the security posture of the Python ecosystem.
             </p>
             <p>
