--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,20 +35,24 @@
 <body>
 <div class="header">
   <div class="container">
-    <div class="row">
-      <a href="/">About</a> •
-      <a href="{{ url_for('list_blog_posts') }}">Blog</a> •
-      <a href="{{ url_for('rss_blog_posts') }}">RSS</a> •
-      <a href="{{ url_for('links') }}">Blogroll</a>
+    <div class="row" style="line-height: 1.3; max-width: 100%; overflow: hidden;">
+        <nobr>
+          <a href="{{ url_for('list_blog_posts') }}">Blog</a> :
+          <a href="{{ url_for('about') }}">About</a> :
+          <a href="{{ url_for('links') }}">Links</a> :
+          <a href="{{ url_for('rss_blog_posts') }}">RSS</a> :
+          <a href="https://mastodon.social/@sethmlarson" target="_blank">Mastodon</a> :
+          <a href="mailto:sethmichaellarson@gmail.com" target="_blank">Email</a>
+        </nobr>
     </div>
+  </div>
+</div>
+<div class="container">
     <div class="row">
       {% block header %}
       <h1>{{ title }}</h1>
       {% endblock %}
     </div>
-  </div>
-</div>
-<div class="container">
 {% block content %}{% endblock %}
 </div>
 <script data-goatcounter="https://sethmlarson-dev.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
