Update link archive

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -17,7 +17,16 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
-<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://www.youtube.com/watch?v=hCQCP-5g5bo">I Saved a PNG Image To A Bird</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://dustri.org/b/objects-should-shut-the-fuck-up.html">Artificial truth</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://zenhax.com/viewtopic.php@t=695.html">SEGA fast PRS compression</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://gist.github.com/mid-kid/149e7415e5da89cca5e2dd36459eeac5">Convert GBA Multiboot/Joyboot ROMs to cartridge format</a>” by mid-kid</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://pineight.com">Pin Eight (NES, SNES, and GBA tools)</a>”</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://igwgames.com/blog/2025/06/22/making-a-game-for-the-e-reader-using-nes-tools">Making an E-Reader game with NES tools</a>” by Sarah Lynne</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://andrewkelley.me/post/renting-is-for-suckers.html">Renting compute is for suckers</a>” by Andrew Kelley</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://hunterirving.github.io/zine.html/zine.html">zine.html</a>” by elliotisacoolguy</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://www.youtube.com/watch?v=yYRzPBJxEAs">Graphic design in Mario Kart World</a>” by elliotisacoolguy</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://www.citationneeded.news/curate-with-rss">Curate your own newspaper with RSS</a>” by Molly White</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://www.youtube.com/watch?v=hCQCP-5g5bo">I saved a PNG to a bird</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://happyfellow.bearblog.dev/computational-tyranny">Computational Tyranny</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://tenbluelinks.org">Disabling Google Search AI overview</a>”</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://udm14.com">?udm=14</a>”</td></tr>
@@ -254,8 +263,8 @@
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://gamebanana.com/mods/544238">Super Mario 64 in Sonic Adventure DX</a>” by Sora</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.youtube.com/watch?v=1-LWI2tGfhQ">FlippyDrive for the GameCube</a>” by Macho Nacho</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://fabiensanglard.net/snes_video/index.html">Super Nintendo Video System</a>” by Fabien Sanglard</td></tr>
-<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by Kirbyster</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://youtu.be/nviIKTywuYU?si=mgFOhNBRMCTAIwOU">A video about Melee</a>” by AsumSaus</td></tr>
+<tr><td title="Retro Gaming">🎮</td><td>“<a href="https://youtube.com/watch?si=BDytOgheHFncVBK9&v=tfS9SYPT-jw">Super Paper Mario's design</a>” by Kirbyster</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://orangegb.com/orangefm">ORANGE FM, Game Boy cartridge for FM Radio</a>” by Evan Barger</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="http://www.blarg.ca/2021/02/15/using-a-gamecube-ascii-keyboard-controller-with-libogc">Gamecube ASCII keyboard controller and libogc</a>” by Gered King</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://www.youtube.com/watch?v=699HVbOKNtc">GameCube, Wii, Wii U, and PC connected via Broadband Adapter</a>” by Good Vibes Gaming</td></tr>
