How many RSS subscribers do I have?

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -17,7 +17,7 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
-<tr><td title="Life">🏞️</td><td>“<a href="https://dustri.org/b/objects-should-shut-the-fuck-up.html">Artificial truth</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://dustri.org/b/objects-should-shut-the-fuck-up.html">Objects should shut the f*ck up</a>” by Julien Voisin</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://zenhax.com/viewtopic.php@t=695.html">SEGA fast PRS compression</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://gist.github.com/mid-kid/149e7415e5da89cca5e2dd36459eeac5">Convert GBA Multiboot/Joyboot ROMs to cartridge format</a>” by mid-kid</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://pineight.com">Pin Eight (NES, SNES, and GBA tools)</a>”</td></tr>
