Fix Bluesky link

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -32,7 +32,7 @@
 <blockquote>
     <p>
         <strong><nobr>Wow, you made it to the end!</nobr></strong>
-        Let me know what you thought on <a href="https://mastodon.social/@sethmlarson" target="_blank">Mastodon</a> or <a href="https://bsky.app/@sethmlarson.dev" target="_blank">Bluesky</a>. <nobr>Get notified of new posts</nobr> by subscribing to the <a href="{{ url_for('rss_blog_posts') }}">RSS feed</a> or <a href="https://buttondown.email/sethmlarson">email newsletter</a>.
+        Let me know what you thought on <a href="https://mastodon.social/@sethmlarson" target="_blank">Mastodon</a> or <a href="https://bsky.app/profile/sethmlarson.dev" target="_blank">Bluesky</a>. <nobr>Get notified of new posts</nobr> by subscribing to the <a href="{{ url_for('rss_blog_posts') }}">RSS feed</a> or <a href="https://buttondown.email/sethmlarson">email newsletter</a>.
     <form
       action="https://buttondown.email/api/emails/embed-subscribe/sethmlarson"
       method="post"
