--- a/app/templates/blog-posts.html
+++ b/app/templates/blog-posts.html
@@ -6,7 +6,7 @@
         {% for bp in blog_posts[month] %}
         {% if bp.slug not in hide_posts %}
         {% if bp.more %}
-        <blockquote>
+        <blockquote style="overflow: hidden">
             <a href="{{ url_for('get_blog_post', blog_post=bp.slug) }}" style="color: #000;"><strong style="text-decoration: underline; text-decoration-thickness: 2px;">{{ bp.title }}</strong></a><br>
             {{ bp.more | safe }}<p>➤ <a href="{{ url_for('get_blog_post', blog_post=bp.slug) }}">Continue reading</a>...</p>
         </blockquote>
