Update links, fix typo

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -17,6 +17,14 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Social Media">📱</td><td>“<a href="https://www.searchengine.show/a-dubai-chocolate-theory-of-the-internet">Dubai chocolate theory of the internet</a>” by Search Engine</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://infrequently.org/2025/09/apples-crimes-against-the-internet-community">Apple's assault on internet standards</a>” by Alex Russell</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://shkspr.mobi/blog/2025/08/is-it-possible-to-allow-sideloading-and-keep-users-safe">Sideloading and user safety</a>” by Terrence Eden</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://anubis.techaro.lol/blog/2025/cpu-core-odd">Sometimes CPU cores are odd</a>” by Xe Iaso</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://yamanot.es">Yamanotes</a>”</td></tr>
+<tr><td title="Security">🔒</td><td>“<a href="https://opensourcesecurity.io/2025/08-oss-one-person">Open source is one person</a>” by Josh Bressers</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://www.pieterpost.com">Never lick a stamp again!</a>”</td></tr>
+<tr><td title="Social Media">📱</td><td>“<a href="https://localghost.dev/blog/this-website-is-for-humans">This website is for humans</a>” by Sophie Coonin</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://dustri.org/b/objects-should-shut-the-fuck-up.html">Objects should shut the f*ck up</a>” by Julien Voisin</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://zenhax.com/viewtopic.php@t=695.html">SEGA fast PRS compression</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://gist.github.com/mid-kid/149e7415e5da89cca5e2dd36459eeac5">Convert GBA Multiboot/Joyboot ROMs to cartridge format</a>” by mid-kid</td></tr>
