Zelda Collector's Edition

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -17,6 +17,8 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://files.spritely.institute/papers/petnames.html">Petnames: What if domain names were like phone contacts?</a>”</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://mathstodon.xyz/@divbyzero/115137414728152361">Truchet QR code</a>”</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://www.searchengine.show/a-dubai-chocolate-theory-of-the-internet">Dubai chocolate theory of the internet</a>” by Search Engine</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://infrequently.org/2025/09/apples-crimes-against-the-internet-community">Apple's assault on internet standards</a>” by Alex Russell</td></tr>
 <tr><td title="Security">🔒</td><td>“<a href="https://shkspr.mobi/blog/2025/08/is-it-possible-to-allow-sideloading-and-keep-users-safe">Sideloading and user safety</a>” by Terrence Eden</td></tr>
