Update Pikmin 2 for PAL!

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}Seth Michael Larson{% endblock %}</title>
+    <title>{% block title %}Seth Larson{% endblock %}</title>
     <meta name="description" content="Python, open source, and the internet">
     <meta name="keywords" content="python pypi open source maintainer urllib3 requests http networking security oss">
     <meta name="author" content="Seth Michael Larson">
