--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ blog_title }}{% endblock %}
+{% block title %}{{ blog_title }} — Seth Larson{% endblock %}
 {% block opengraph %}
     <meta property="og:site_name" content="sethmlarson.dev"/>
     <meta property="og:author" content="Seth Michael Larson"/>
