--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Cool URLs that I hope won't change{% endblock %}
+{% block title %}Blogroll — Seth Larson{% endblock %}
 {% block header %}
 <h1><a href="https://www.w3.org/Provider/Style/URI">Cool URLs</a> that I hope won't change</h1>
 {% endblock %}
@@ -17,6 +17,12 @@
 </p>
 <p id="#sentinel">
 <table style="table-layout: fixed">
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://fershad.com/writing/making-this-website-grid-aware">Website optimizing for renewable energy</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://taylor.town/type-of-person">I'm the type of person who...</a>” by Taylor</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://addinbox.sakura.ne.jp/holiday_logic_English.htm">Japanese holidays encoded in software</a>”</td></tr>
+<tr><td title="Software and OSS">🖥️</td><td>“<a href="https://absolutelyright.lol">You're absolutely right!</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://waxy.org/2025/08/will-smiths-concert-crowds-were-real-but-ai-is-blurring-the-lines">Automatic AI upscaling is blurs the lines between real and fake</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://506sports.com/nfl/index.php">Which NFL games are broadcast in my area?</a>”</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://files.spritely.institute/papers/petnames.html">Petnames: What if domain names were like phone contacts?</a>”</td></tr>
 <tr><td title="Toys and Art">🖼️</td><td>“<a href="https://mathstodon.xyz/@divbyzero/115137414728152361">Truchet QR code</a>”</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://www.searchengine.show/a-dubai-chocolate-theory-of-the-internet">Dubai chocolate theory of the internet</a>” by Search Engine</td></tr>
@@ -33,7 +39,7 @@
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://pineight.com">Pin Eight (NES, SNES, and GBA tools)</a>”</td></tr>
 <tr><td title="Retro Gaming">🎮</td><td>“<a href="https://igwgames.com/blog/2025/06/22/making-a-game-for-the-e-reader-using-nes-tools">Making an E-Reader game with NES tools</a>” by Sarah Lynne</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://andrewkelley.me/post/renting-is-for-suckers.html">Renting compute is for suckers</a>” by Andrew Kelley</td></tr>
-<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://hunterirving.github.io/zine.html/zine.html">zine.html</a>” by elliotisacoolguy</td></tr>
+<tr><td title="Toys and Art">🖼️</td><td>“<a href="https://hunterirving.github.io/zine.html/zine.html">zine.html</a>” by Hunter Irving</td></tr>
 <tr><td title="Toys and Art">🖼️</td><td>“<a href="https://www.youtube.com/watch?v=yYRzPBJxEAs">Graphic design in Mario Kart World</a>” by elliotisacoolguy</td></tr>
 <tr><td title="Social Media">📱</td><td>“<a href="https://www.citationneeded.news/curate-with-rss">Curate your own newspaper with RSS</a>” by Molly White</td></tr>
 <tr><td title="Toys and Art">🖼️</td><td>“<a href="https://www.youtube.com/watch?v=hCQCP-5g5bo">I saved a PNG to a bird</a>”</td></tr>
