More Pikmin 2 PAL with fixes!

--- a/app/templates/links.html
+++ b/app/templates/links.html
@@ -21,7 +21,7 @@
 <tr><td title="Life">🏞️</td><td>“<a href="https://taylor.town/type-of-person">I'm the type of person who...</a>” by Taylor</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://addinbox.sakura.ne.jp/holiday_logic_English.htm">Japanese holidays encoded in software</a>”</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://absolutelyright.lol">You're absolutely right!</a>”</td></tr>
-<tr><td title="Life">🏞️</td><td>“<a href="https://waxy.org/2025/08/will-smiths-concert-crowds-were-real-but-ai-is-blurring-the-lines">Automatic AI upscaling is blurs the lines between real and fake</a>”</td></tr>
+<tr><td title="Life">🏞️</td><td>“<a href="https://waxy.org/2025/08/will-smiths-concert-crowds-were-real-but-ai-is-blurring-the-lines">Automatic AI upscaling blurs the lines between real and fake</a>”</td></tr>
 <tr><td title="Life">🏞️</td><td>“<a href="https://506sports.com/nfl/index.php">Which NFL games are broadcast in my area?</a>”</td></tr>
 <tr><td title="Software and OSS">🖥️</td><td>“<a href="https://files.spritely.institute/papers/petnames.html">Petnames: What if domain names were like phone contacts?</a>”</td></tr>
 <tr><td title="Toys and Art">🖼️</td><td>“<a href="https://mathstodon.xyz/@divbyzero/115137414728152361">Truchet QR code</a>”</td></tr>
